// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CenterDetailsModal /> Rendering: should use default image when centerImages is not passed in props 1`] = `
<div
  className="modal fade"
  id="center-details-modal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
    role="document"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title text-capitalize"
        >
          Test Center
        </h5>
        <button
          className="close no-outline-btn pointer-button"
          data-dismiss="modal"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <div
          className="center-image"
        >
          <img
            alt="The Center"
            src="/images/defaultImgx4.jpeg"
          />
        </div>
        <div
          className="center-details"
        >
          <p>
            I am the test center
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CenterDetailsModal /> Rendering: should use the image passed as centerImages in props 1`] = `
<div
  className="modal fade"
  id="center-details-modal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
    role="document"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title text-capitalize"
        >
          Test Center
        </h5>
        <button
          className="close no-outline-btn pointer-button"
          data-dismiss="modal"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <div
          className="center-image"
        >
          <img
            alt="The Center"
            src="https://linkToCenterImage"
          />
        </div>
        <div
          className="center-details"
        >
          <p>
            I am the test center
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ConfirmationModal /> Rendering: should render correctly 1`] = `
<div
  className="modal fade"
  id="confirmation-modal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
    role="document"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
        >
          Confirmation
        </h5>
        <button
          className="close pointer-button"
          data-dismiss="modal"
          onClick={[MockFunction]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <p>
          I am the confirmation modal
        </p>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn ie-dark-button"
          data-dismiss="modal"
          onClick={[MockFunction]}
          type="button"
        >
          No
        </button>
        <button
          className="btn ie-blue-button"
          onClick={[MockFunction]}
          type="button"
        >
          Yes
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EventDetailsModal /> Rendering: should render correctly 1`] = `
<div
  className="modal fade"
  id="event-details-modal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
    role="document"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
        >
          Test event
        </h5>
        <button
          className="close"
          data-dismiss="modal"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <p>
          I am the test event
        </p>
      </div>
    </div>
  </div>
</div>
`;
